# unrealmate

./: .gitattributes  .unrealmate.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
final_test_env/: .gitignore
tests/: test_cli.py
unrealmate/: cli.py
unrealmate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unrealmate/core/: config.py  logger.py  signature.py
unrealmate/core/blueprint/: complexity
unrealmate/core/git/: gitignore
unrealmate/core/performance/: __init__.py  memory_auditor.py  profiler.py  shader_analyzer.py
unrealmate/core/plugins/: __init__.py  manager.py
unrealmate/templates/: gitattributes.template  gitignore.template
