 [build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unrealmate"
version = "0.1.9"
description = "All-in-one CLI toolkit for Unreal Engine developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "gktrk363"}
]
keywords = ["unreal", "unreal-engine", "gamedev", "cli", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
]

[project.scripts]
unrealmate = "unrealmate.cli:app"

[project.urls]
Homepage = "https://github.com/gktrk363/unrealmate"
Repository = "https://github.com/gktrk363/unrealmate"

[tool.setuptools.package-data]
unrealmate = ["templates/*"]